--- a/jQuery_BS/css/mycss.css
+++ b/jQuery_BS/css/mycss.css
@@ -204,4 +204,19 @@
     margin-left: auto;
 }
 
+.nav.navbar-nav a:after {
+	content: "";
+    top: auto;
+    bottom: 4px;
+    width: 100%;
+    position: absolute;
+    right: auto;
+    background: #1a7ab9;
+    display: none;
+    left: 0;
+    height: 4px;
+}
+.nav.navbar-nav a:hover:after {
+	display: block!important;
+}
 
